Add Blueprint file

--- a/blueprint.yaml
+++ b/blueprint.yaml
@@ -32,18 +32,12 @@ inputs:
     type: string
     default: Accenture
 
-  count:
-    description: >
-      Cluster size
-    type: integer
-    default: 7
-
   template:
     default: 'templates/cluster.json'
 
-  # node_pool_size:
-  #   type: integer
-  #   default: 5
+  node_pool_size:
+    type: integer
+    default: 6
 
 node_templates:
 
@@ -55,7 +49,7 @@ node_templates:
       resource_group_name: { get_input: resource_group_name }
       name: { get_input: deployment_name }
       params:
-        resourceName: accentureaks
+        resourceName: accenturelaks
         location: eastus
         dnsPrefix: accentureaks-dns
         kubernetesVersion: 1.18.14
@@ -65,10 +59,9 @@ node_templates:
         enableHttpApplicationRouting: false
         enableAzurePolicy: false
         vmssNodePool: true
-        count: { get_input: count }
-        # nodePoolSize: { get_input: node_pool_size }
+        count: { get_input: node_pool_size }
         workspaceName: DefaultWorkspace-937eb75f-e9d8-40e7-b7b7-ff1bd75f3d88-WEU
         omsWorkspaceId: '/subscriptions/937eb75f-e9d8-40e7-b7b7-ff1bd75f3d88/resourcegroups/defaultresourcegroup-weu/providers/microsoft.operationalinsights/workspaces/defaultworkspace-937eb75f-e9d8-40e7-b7b7-ff1bd75f3d88-weu'
-        workspaceRegion: westeurope
+        workspaceRegion: eastus
       template_file: { get_input: template }
 
